# timestar-nodejs

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
benchmark/: bench.ts  compare.ts
native/: CMakeLists.txt
native/include/: alp_constants.hpp  alp_ffor.hpp  ts_buffer.hpp
native/src/: addon.cpp  alp_encoder.cpp  bool_rle_encoder.cpp  ffor_encoder.cpp  string_encoder.cpp
proto/: timestar.proto
src/: client.ts  compression.ts  index.ts  proto.ts  types.ts
test/: compression.test.ts  integration.test.ts
